add html code, work on formatting

--- a/cities_data.html
+++ b/cities_data.html
@@ -26,6 +26,8 @@
     tr:nth-child(even) {
         background-color: rgb(247, 248, 247);
     }
+
+    
 </style>
 
 </head>
@@ -70,8 +72,18 @@
     <br>
 
 <table border="1" class="dataframe">
+<col style="width: 4%;">
+<col style="width: 4%;">
+<col style="width: 4%;">
+<col style="width: 8%;">
+<col style="width: 4%;">
+<col style="width: 4%;">
+<col style="width: 4%;">
+<col style="width: 4%;">
+<col style="width: 4%;">
+<col style="width: 4%;">
   <thead>
-    <tr style="text-align: right;">
+    <tr style="text-align: center;">
       <th>City ID</th>
       <th>Country</th>
       <th>City</th>
