--- a/humidity.html
+++ b/humidity.html
@@ -72,7 +72,7 @@
                 <hr>
                 <div class="row">
                     <div class="col-3 col-md-6">
-                        <a href="temperature.html"><img src="Resources/images/Fig1.png" width="100%" alt="temprature">
+                        <a href="temperature.html"><img src="Resources/images/Fig1.png" width="100%" alt="temperature">
                         </a>
                     </div>
                     
