--- a/comparison.html
+++ b/comparison.html
@@ -60,8 +60,8 @@
   <p>Click any plot to get indept analysis</p>
   <div class="row">
       <div class="col-md-6">
-          <h3 class="text-center">vs. Max Teperature</h3>
-          <a href="temp.html"><img width="100%" src="Resources/images/Fig1.png"></a>   
+          <h3 class="text-center">vs. Max Temperature</h3>
+          <a href="temperature.html"><img width="100%" src="Resources/images/Fig1.png"></a>   
       </div>
       <div class="col-md-6">
           <h3 class="text-center">vs. Humidity</h3>
