--- a/temperature.html
+++ b/temperature.html
@@ -70,7 +70,7 @@
                 <hr>
                 <div class="row">
                     <div class="col-3 col-md-6">
-                        <a href="temperature.html"><img class="pic" src="Resources/images/Fig1.png" width="100%" alt="temprature"></a>
+                        <a href="temperature.html"><img class="pic" src="Resources/images/Fig1.png" width="100%" alt="temperature"></a>
                     </div>
                     
                     <div class="col-3 col-md-6">
