--- a/cloudiness.html
+++ b/cloudiness.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
   integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
   crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" 
@@ -20,7 +20,6 @@
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
   crossorigin="anonymous"></script>   
 
-    <!--Landing page-->
     <!--Navbar adjustments-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
@@ -60,10 +59,10 @@
                 <hr>
                 <img src="Resources/images/Fig3.png" width="100%" alt="cloudiness">
                 <br>
-                <p>This plot doesn't necessarily show any trend between latitude and cloudiness. We can't say cloudiness increase or decrease when latitude get closer to the equator. Clouds tend to form in abundance in the middle latitudes 60 degrees north and south of the equator. This is where the edges of polar and mid latitude circulation cells collide and push air upward. </p>
+                <p>There are three broad bands where Earth’s skies are most likely to be cloudy: a narrow strip near the equator and two wider strips in the mid-latitudes. The band near the equator is a function of the large scale circulation patterns present in the tropics.  Clouds also tend to form in abundance in the middle latitudes north and south of the equator. This is where the edges of polar and mid-latitude circulation cells collide and push air upward </p>
             </div>
         </div>
-        <!--visualizations container adjustments-->
+        <!--visualizations-->
         <div class="col-md-4">
             <div class="col-md-12">
                 <h3>Visualizations</h3>
