--- a/humidity.html
+++ b/humidity.html
@@ -20,7 +20,6 @@
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
   crossorigin="anonymous"></script>   
 
-    <!--Landing page-->
     <!--Navbar adjustments-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
@@ -62,10 +61,10 @@
                 
                 <img src="Resources/images/Fig2.png" width="100%" alt="humidity">
                 <br>
-                <p>Humidity vs latitude plot is not showing any trends. Humidity appears to be mostly regular across latitudes, though with an absence of lower humidity values near the equator and Arctic. This makes sense, due to the humidity of tropical climates, and the northern latitudes being on the boundary between winter and spring.  </p>
+                <p>Humidity is the presence of water in the atmosphere due to the water dispersion into the surrounding air as gaseous water vapor.  However, humidity isn't always directly relational to latitude.  The Sahara Desert is very close to the same latitude as Jamaica, but the two regions vary significantly in reference to humidity.  Coastal Alaska is home to one of only six coastal temperate rainforests globally, clearly demonstrating that proximity to the equator has little effect on humidity.  Proximity to water and prevailing weather patterns seem to be one of the most significant contributors to humidity.</p>
             </div>
         </div>
-<!--visualization part of the page-->            
+<!--visualization-->            
         <div class="col-md-4">
             <div class="col-md-12">
                 <h3>Visualizations</h3>
