--- a/temperature.html
+++ b/temperature.html
@@ -20,7 +20,6 @@
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
   crossorigin="anonymous"></script>   
 
-    <!--Landing page-->
     <!--Navbar adjustments-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
@@ -60,10 +59,10 @@
                 <hr>
                 <img src="Resources/images/Fig1.png" width="100%" alt="temperature">
                 <br>
-                <p>As expected, the weather becomes significantaly warmer as one approaches the equator (Deg. Latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of the year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered.</p>
+                <p>As expected, cities closest to the equator have higher ambient temperatures. However, cities in the northern hemisphere experienced cooler weather versus towns in the southern hemisphere. The higher temperatures could be attributed to there being more landmass in the northern hemisphere, resulting in a higher concentration of cities. More analysis is needed to determine population level and total city count between the northern and southern hemispheres to more precisely evaluate the data.</p>
             </div>
         </div>
-        <!--visualizations container -->
+        <!--visualizations-->
         <div class="col-md-4">
             <div class="col-md-12">
                 <h3>Visualizations</h3>
