--- a/wind_speed.html
+++ b/wind_speed.html
@@ -20,7 +20,6 @@
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
   crossorigin="anonymous"></script>   
 
-    <!--Landing page-->
     <!--Navbar adjustments-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
@@ -63,7 +62,7 @@
                 <p>Observed wind speeds aren’t dependant on latitude but are most likely influenced by local weather patterns. </p>
             </div>
         </div>
-        <!--visualizations container adjustments-->
+        <!--visualizations-->
         <div class="col-md-4">
             <div class="col-md-12">
                 <h3>Visualizations</h3>
